--- a/index.html
+++ b/index.html
@@ -34,7 +34,16 @@
               </ul>
             </nav>
             <div class="phone">
-              <a href="tel:+7999999999" class="phone_item">+7 (999) 999-99-99</a>
+              <a href="tel:+7999999999" class="phone_item header-page__phone">+7 (999) 999-99-99</a>
+            </div>
+            <div class="header-page__hamburger">
+              <button class="btn-menu" type="button">
+                <span class="btn-menu__box">
+                  <span class="btn-menu__inner">
+                    
+                  </span>
+                </span>
+              </button>
             </div>
           </div>
         </div>
