--- a/index.html
+++ b/index.html
@@ -64,6 +64,277 @@
     </div>
   </section>
   <!-- ./section top -->
-  
+
+  <!-- section catalog-->
+  <section class="section section-catalog">
+    <div class="container">
+      <header class="section-header">
+        <h2 class="section-title section-title--accent">Меню</h2>
+        <nav class="catalog-nav">
+          <ul class="catalog-nav__wrapper">
+            <li class="catalog-nav__item">
+              <button class="catalog-nav__btn is-active">все</button>
+            </li>
+            <li class="catalog-nav__item">
+              <button class="catalog-nav__btn">грибные</button>
+            </li>
+            <li class="catalog-nav__item">
+              <button class="catalog-nav__btn">мясные</button>
+            </li>
+            <li class="catalog-nav__item">
+              <button class="catalog-nav__btn">сырные</button>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <div class="catalog">
+        <div class="catalog-item">
+          <div class="product">
+            <img src="/img/section-catalog/1.png" alt=""class="product-img">
+            <div class="product-content">
+              <h3 class="product-title">Салями</h3>
+              <p class="product-description">Салями, картофель и морковь, 
+                огуры маринованные, моцарелла, цыпленок, ветчина и французский сыр</p>
+            </div>
+            <footer class="product-footer">
+              <div class="product-sizes">
+                <button class="product-size" type="button">35см</button>
+                <button class="product-size" type="button">30см</button>
+                <button class="product-size" type="button">25см</button>
+              </div>
+              <div class="product-bottom">
+                <div class="product-price">
+                  <span class="product-price__value">850</span>
+                  <span class="product-currenncy">&#8381;</span>
+                </div>
+                <button class="btn product-btn" type="button">Заказать</button>
+              </div>
+            </footer>
+          </div>
+          <div class="product">
+            <img src="/img/section-catalog/2.png" alt=""class="product-img">
+            <div class="product-content">
+              <h3 class="product-title">Хит</h3>
+              <p class="product-description">Салями, картофель и морковь, 
+                огуры маринованные, моцарелла, цыпленок, ветчина и французский сыр</p>
+            </div>
+            <footer class="product-footer">
+              <div class="product-sizes">
+                <button class="product-size" type="button">35см</button>
+                <button class="product-size" type="button">30см</button>
+                <button class="product-size" type="button">25см</button>
+              </div>
+              <div class="product-bottom">
+                <div class="product-price">
+                  <span class="product-price__value">850</span>
+                  <span class="product-currenncy">&#8381;</span>
+                </div>
+                <button class="btn product-btn" type="button">Заказать</button>
+              </div>
+            </footer>
+          </div>
+          <div class="product">
+            <img src="/img/section-catalog/3.png" alt=""class="product-img">
+            <div class="product-content">
+              <h3 class="product-title">Ветчина-грибы</h3>
+              <p class="product-description">Салями, картофель и морковь, 
+                огуры маринованные, моцарелла, цыпленок, ветчина и французский сыр</p>
+            </div>
+            <footer class="product-footer">
+              <div class="product-sizes">
+                <button class="product-size" type="button">35см</button>
+                <button class="product-size" type="button">30см</button>
+                <button class="product-size" type="button">25см</button>
+              </div>
+              <div class="product-bottom">
+                <div class="product-price">
+                  <span class="product-price__value">850</span>
+                  <span class="product-currenncy">&#8381;</span>
+                </div>
+                <button class="btn product-btn" type="button">Заказать</button>
+              </div>
+            </footer>
+          </div>
+          <div class="product">
+            <img src="/img/section-catalog/4.png" alt=""class="product-img">
+            <div class="product-content">
+              <h3 class="product-title">Салями</h3>
+              <p class="product-description">Салями, картофель и морковь, 
+                огуры маринованные, моцарелла, цыпленок, ветчина и французский сыр</p>
+            </div>
+            <footer class="product-footer">
+              <div class="product-sizes">
+                <button class="product-size" type="button">35см</button>
+                <button class="product-size" type="button">30см</button>
+                <button class="product-size" type="button">25см</button>
+              </div>
+              <div class="product-bottom">
+                <div class="product-price">
+                  <span class="product-price__value">850</span>
+                  <span class="product-currenncy">&#8381;</span>
+                </div>
+                <button class="btn product-btn" type="button">Заказать</button>
+              </div>
+            </footer>
+          </div>
+          <div class="product">
+            <img src="/img/section-catalog/5.png" alt=""class="product-img">
+            <div class="product-content">
+              <h3 class="product-title">Салями</h3>
+              <p class="product-description">Салями, картофель и морковь, 
+                огуры маринованные, моцарелла, цыпленок, ветчина и французский сыр</p>
+            </div>
+            <footer class="product-footer">
+              <div class="product-sizes">
+                <button class="product-size" type="button">35см</button>
+                <button class="product-size" type="button">30см</button>
+                <button class="product-size" type="button">25см</button>
+              </div>
+              <div class="product-bottom">
+                <div class="product-price">
+                  <span class="product-price__value">850</span>
+                  <span class="product-currenncy">&#8381;</span>
+                </div>
+                <button class="btn product-btn" type="button">Заказать</button>
+              </div>
+            </footer>
+          </div>
+          <div class="product">
+            <img src="/img/section-catalog/6.png" alt=""class="product-img">
+            <div class="product-content">
+              <h3 class="product-title">Салями</h3>
+              <p class="product-description">Салями, картофель и морковь, 
+                огуры маринованные, моцарелла, цыпленок, ветчина и французский сыр</p>
+            </div>
+            <footer class="product-footer">
+              <div class="product-sizes">
+                <button class="product-size" type="button">35см</button>
+                <button class="product-size" type="button">30см</button>
+                <button class="product-size" type="button">25см</button>
+              </div>
+              <div class="product-bottom">
+                <div class="product-price">
+                  <span class="product-price__value">850</span>
+                  <span class="product-currenncy">&#8381;</span>
+                </div>
+                <button class="btn product-btn" type="button">Заказать</button>
+              </div>
+            </footer>
+          </div>
+          <div class="product">
+            <img src="/img/section-catalog/7.png" alt=""class="product-img">
+            <div class="product-content">
+              <h3 class="product-title">Салями</h3>
+              <p class="product-description">Салями, картофель и морковь, 
+                огуры маринованные, моцарелла, цыпленок, ветчина и французский сыр</p>
+            </div>
+            <footer class="product-footer">
+              <div class="product-sizes">
+                <button class="product-size" type="button">35см</button>
+                <button class="product-size" type="button">30см</button>
+                <button class="product-size" type="button">25см</button>
+              </div>
+              <div class="product-bottom">
+                <div class="product-price">
+                  <span class="product-price__value">850</span>
+                  <span class="product-currenncy">&#8381;</span>
+                </div>
+                <button class="btn product-btn" type="button">Заказать</button>
+              </div>
+            </footer>
+          </div>
+          <div class="product">
+            <img src="/img/section-catalog/8.png" alt=""class="product-img">
+            <div class="product-content">
+              <h3 class="product-title">Салями</h3>
+              <p class="product-description">Салями, картофель и морковь, 
+                огуры маринованные, моцарелла, цыпленок, ветчина и французский сыр</p>
+            </div>
+            <footer class="product-footer">
+              <div class="product-sizes">
+                <button class="product-size" type="button">35см</button>
+                <button class="product-size" type="button">30см</button>
+                <button class="product-size" type="button">25см</button>
+              </div>
+              <div class="product-bottom">
+                <div class="product-price">
+                  <span class="product-price__value">850</span>
+                  <span class="product-currenncy">&#8381;</span>
+                </div>
+                <button class="btn product-btn" type="button">Заказать</button>
+              </div>
+            </footer>
+            <img src="/img/section-catalog/1.png" alt=""class="product-img">
+            <div class="product-content">
+              <h3 class="product-title">Салями</h3>
+              <p class="product-description">Салями, картофель и морковь, 
+                огуры маринованные, моцарелла, цыпленок, ветчина и французский сыр</p>
+            </div>
+            <footer class="product-footer">
+              <div class="product-sizes">
+                <button class="product-size" type="button">35см</button>
+                <button class="product-size" type="button">30см</button>
+                <button class="product-size" type="button">25см</button>
+              </div>
+              <div class="product-bottom">
+                <div class="product-price">
+                  <span class="product-price__value">850</span>
+                  <span class="product-currenncy">&#8381;</span>
+                </div>
+                <button class="btn product-btn" type="button">Заказать</button>
+              </div>
+            </footer>
+          </div>
+          <div class="product">
+            <img src="/img/section-catalog/9.png" alt=""class="product-img">
+            <div class="product-content">
+              <h3 class="product-title">Салями</h3>
+              <p class="product-description">Салями, картофель и морковь, 
+                огуры маринованные, моцарелла, цыпленок, ветчина и французский сыр</p>
+            </div>
+            <footer class="product-footer">
+              <div class="product-sizes">
+                <button class="product-size" type="button">35см</button>
+                <button class="product-size" type="button">30см</button>
+                <button class="product-size" type="button">25см</button>
+              </div>
+              <div class="product-bottom">
+                <div class="product-price">
+                  <span class="product-price__value">850</span>
+                  <span class="product-currenncy">&#8381;</span>
+                </div>
+                <button class="btn product-btn" type="button">Заказать</button>
+              </div>
+            </footer>
+            <img src="/img/section-catalog/1.png" alt=""class="product-img">
+            <div class="product-content">
+              <h3 class="product-title">Салями</h3>
+              <p class="product-description">Салями, картофель и морковь, 
+                огуры маринованные, моцарелла, цыпленок, ветчина и французский сыр</p>
+            </div>
+            <footer class="product-footer">
+              <div class="product-sizes">
+                <button class="product-size" type="button">35см</button>
+                <button class="product-size" type="button">30см</button>
+                <button class="product-size" type="button">25см</button>
+              </div>
+              <div class="product-bottom">
+                <div class="product-price">
+                  <span class="product-price__value">850</span>
+                  <span class="product-currenncy">&#8381;</span>
+                </div>
+                <button class="btn product-btn" type="button">Заказать</button>
+              </div>
+            </footer>
+          </div>
+        </div> 
+      </div>
+    </div>
+
+  </section>
+
+
+
+  <!-- ./section catalog-->
 </body>
 </html>
